@@ -1,3 +1,14 @@
+2018-09-17  Woodrow Wang  <woodrow_wang@apple.com>
+
+        Clear pending resource load statistics' writes after tests
+        https://bugs.webkit.org/show_bug.cgi?id=189632
+        <rdar://problem/44469275>
+
+        Reviewed by Chris Dumez.
+
+        * UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
+        (WKWebsiteDataStoreStatisticsResetToConsistentState):
+
 2018-09-17  Chris Dumez  <cdumez@apple.com>
 
         PSON: window.open() with 'noopener' should only process-swap cross-site, not cross-origin
